# Fast_zero

./: .coverage  .gitignore  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  setting.py
migrations/: env.py
migrations/versions/: 4a7f960d7ed2_create_users_table.py
tests/: test_app.py  test_db.py
